setup automatic deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vuefire-vite-example",
+  "packageManager": "pnpm@7.18.2",
   "private": true,
   "version": "0.0.0",
   "type": "module",
