--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -3,6 +3,9 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
+    paths-ignore:
+      - *.md
+      - .gitignore
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
